/*
 * To change this license header, choose License Headers in Project Properties.
 * To change this template file, choose Tools | Templates
 * and open the template in the editor.
 */
package capas;

/**
 *
 * @author valde
 */
public class NegocioProducto {
    private DatoTipoProducto dato ;

    public NegocioProducto() {
        this.dato = new DatoTipoProducto();
    }
    
}
